k8s/geoservice-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoservice
spec:
  selector:
    matchLabels:
      app: geoservice
  template:
    metadata:
      labels:
        app: geoservice
    spec:
      containers:
      - name: geoservice
        image: cydoniast/geo-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: geoservice
spec:
  type: ClusterIP
  selector:
    app: geoservice
  ports:
  - name: geoservice-port
    port: 8082
    targetPort: 8082
