k8s/planner-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner
spec:
  selector:
    matchLabels:
      app: planner
  template:
    metadata:
      labels:
        app: planner
    spec:
      containers:
      - name: planner
        image: cydoniast/planner
        ports:
        - containerPort: 8080
        
     
---
apiVersion: v1
kind: Service
metadata:
  name: planner
spec:
  type: ClusterIP
  selector:
    app: planner
  ports:
  - name: planner-port
    port: 8080
    targetPort: 8080
