k8s/windservice-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windservice
spec:
  selector:
    matchLabels:
      app: windservice
  template:
    metadata:
      labels:
        app: windservice
    spec:
      containers:
      - name: windservice
        image: cydoniast/windservice
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: windservice
spec:
  type: ClusterIP
  selector:
    app: windservice
  ports:
  - name: windservice-port
    port: 8084
    targetPort: 8084
