k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp06
  annotations:
     traefik.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
      - http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 443
